# advent-of-code-2021

./: README.md  workspace.code-workspace
cpp/: CMakeLists.txt  CMakePresets.json  watch
cpp/src/day-01/: CMakeLists.txt  main.cc  sonar.cc  sonar.h  test.cc
cpp/src/day-02/: CMakeLists.txt  dive.cc  dive.h  main.cc  test.cc
cpp/src/day-04/: CMakeLists.txt  bingo.cc  bingo.h  main.cc  test.cc
cpp/src/day-08/: CMakeLists.txt  main.cc  seven_segment.cc  seven_segment.h  test.cc
cpp/src/day-11/: CMakeLists.txt  main.cc  octopus.cc  octopus.h  test.cc
cpp/src/day-14/: CMakeLists.txt  main.cc  polymer.cc  polymer.h  test.cc
cpp/src/day-15/: CMakeLists.txt  chiton.cc  chiton.h  main.cc  test.cc
cpp/src/day-19/: CMakeLists.txt  main.cc  matrix.cc  matrix.h  scanner.cc  scanner.h  test.cc
cpp/src/day-21/: CMakeLists.txt  dirac_dice.cc  dirac_dice.h  main.cc  test.cc
cpp/src/day-23/: CMakeLists.txt  amphipod.cc  amphipod.h  folded.cc  main.cc  organizer.cc  organizer.h  test.cc  unfolded.cc
haskell/: .ghcid  package.yaml
haskell/app/AoC/: Day01.hs  Day03.hs  Day05.hs  Day06.hs  Day07.hs  Day09.hs  Day10.hs  Day12.hs  Day13.hs  Day16.hs  Day17.hs  Day18.hs  Day20.hs  Day22.hs  Day24.hs  Day25.hs  Main.hs
haskell/app/Day01/: Main.hs
haskell/app/Day03/: Main.hs
haskell/app/Day05/: Main.hs
haskell/app/Day06/: Main.hs
haskell/app/Day07/: Main.hs
haskell/app/Day09/: Main.hs
haskell/app/Day10/: Main.hs
haskell/app/Day12/: Main.hs
haskell/app/Day13/: Main.hs
haskell/app/Day16/: Main.hs
haskell/app/Day17/: Main.hs
haskell/data/: day-10.txt
(+39 files in other folders)
